2006-12-28  Rob Buis  <buis@kde.org>

        Reviewed by Mitz.

        http://bugs.webkit.org/show_bug.cgi?id=12011
        svg/custom/dynamic-svg-document-creation.svg is failing

        Correct the transform syntax errors (since the new transform
        parser is more strict).

        * svg/custom/dynamic-svg-document-creation.svg:

2006-12-27  Eric Seidel  <eric@eseidel.com>

        Reviewed by ggaren.
        
        Disable MS-font dependent tests until http://bugs.webkit.org/show_bug.cgi?id=11662 is fixed.

        * svg/W3C-SVG-1.1/text-intro-01-t.svg: Removed.
        * svg/W3C-SVG-1.1/text-intro-02-b.svg: Removed.
        * svg/W3C-SVG-1.1/text-intro-03-b.svg: Removed.
        * svg/W3C-SVG-1.1/text-intro-04-t.svg: Removed.

2006-12-27  Mitz Pettel  <mitz@webkit.org>

        Reviewed by Hyatt.

        - pixel test for http://bugs.webkit.org/show_bug.cgi?id=11452
          REGRESSION (r16736-r16801): Incorrect repaint of fixed boxes

        * fast/repaint/fixed-expected.checksum: Added.
        * fast/repaint/fixed-expected.png: Added.
        * fast/repaint/fixed-expected.txt: Added.
        * fast/repaint/fixed.html: Added.

2006-12-27  Mitz Pettel  <mitz@webkit.org>

        Reviewed by Geoff.

        - pixel test for http://bugs.webkit.org/show_bug.cgi?id=11930
          Specifying border-radius makes the outline shrink

        * fast/css/border-radius-outline-offset-expected.checksum: Added.
        * fast/css/border-radius-outline-offset-expected.png: Added.
        * fast/css/border-radius-outline-offset-expected.txt: Added.
        * fast/css/border-radius-outline-offset.html: Added.

2006-12-27  Rob Buis  <buis@kde.org>

        Reviewed by Eric.

        Improved testcase for:
        http://bugs.webkit.org/show_bug.cgi?id=11108
        Replace usage of split by proper parsers
        http://bugs.webkit.org/show_bug.cgi?id=11908
        WebKit spends 40% of its time displaying "bamboo.svg" executing Regexes
