@@ -1,0 +1,34 @@
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01//EN"
+        "http://www.w3.org/TR/html4/strict.dtd">
+<html lang="en">
+<head>
+<style type="text/css">
+    div.test { vertical-align: top; width: 200px; height: 120px; border: 1px solid blue; padding: 10px; }
+</style>
+    <script src="repaint.js" type="text/javascript"></script>
+    <script type="text/javascript">
+       function repaintTest()
+       {
+           document.getElementById('a').style.height = '40px';
+           document.getElementById('b').style.height = '60px';
+       }
+    </script>
+</head>
+<body onload="runRepaintTest();">
+<p>
+    Repaint test for <i><a href="http://bugs.webkit.org/show_bug.cgi?id=10699">http://bugs.webkit.org/show_bug.cgi?id=10699</a>
+    div with border-radius does not redraw properly if element inside div is resized</i>.
+</p>
+<div class="test">
+    <div style="background: teal; padding: 0; border: solid red 4px; -webkit-border-radius: 12px;">
+        <div id="a" style="height: 60px; margin: 10px; background:silver;"></div>
+    </div>
+</div>
+<br>
+<div class="test">
+    <div style="background: teal; padding: 0; border: solid red 4px; -webkit-border-radius: 12px;">
+        <div id="b" style="height: 40px; margin: 10px; background:silver;"></div>
+    </div>
+</div>
+</body>
+</html>
