@@ -1,3 +1,15 @@
+2006-12-28  Mitz Pettel  <mitz@webkit.org>
+
+        Reviewed by Darin.
+
+        - pixel test for http://bugs.webkit.org/show_bug.cgi?id=10699
+          div with border-radius does not redraw properly if element inside div is resized
+
+        * fast/repaint/border-radius-repaint-expected.checksum: Added.
+        * fast/repaint/border-radius-repaint-expected.png: Added.
+        * fast/repaint/border-radius-repaint-expected.txt: Added.
+        * fast/repaint/border-radius-repaint.html: Added.
+
 2006-12-28  Rob Buis  <buis@kde.org>
 
         Reviewed by Mitz.
